--- a/0726-T/form.html
+++ b/0726-T/form.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Example</title>
+    <title>form</title>
 </head>
 <body>
-    <h1>Contact Form</h1>
-    <form action="/submit" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br><br>
-
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email"><br><br>
-
-        <label for="dob">Date of Birth:</label><br>
-        <input type="date" id="dob" name="dob"><br><br>
-
-        <label for="color">Favorite Color:</label><br>
-        <input type="color" id="color" name="color"><br><br>
-
-        <label for="quantity">Quantity:</label><br>
-        <input type="number" id="quantity" name="quantity" min="1" max="10"><br><br>
-
-        <label for="website">Website:</label><br>
-        <input type="url" id="website" name="website"><br><br>
-
-        <label for="time">Preferred Contact Time:</label><br>
-        <input type="time" id="time" name="time"><br><br>
-
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
-
-        <button type="submit">Submit</button>
-    </form>
+    <div>
+        <!-- 입력 폼 -->
+         <form action="">
+            <table>
+                <tr>
+                    <th><label for="name">이름</label></th>
+                    <td><input type="text" name="" id="name" placeholder="성명을 입력 하세요"></td>
+                </tr>
+                <tr>
+                    <th><label for="dept">부서</label></th>
+                    <td><input type="text" name="" id="dept" value="경영지원"></td>
+                </tr>
+                <tr>
+                    <th><label for="rank">직책</label></th>
+                    <td><input type="text" name="" id="rank" value="과장"></td>
+                </tr>
+                <tr>
+                    <th><label for="gender">성별</label></th>
+                    <td>
+                        <input type="radio" name="gender" id="gender"> 남성
+                        <input type="radio" name="gender" id="gender" checked> 여성
+                        <input type="radio" name="gender" id="gender"> 기타
+                    </td>
+                </tr>
+                <tr>
+                    <th><label for="favorit">관심</label></th>
+                    <td>
+                        <input type="checkbox" name="favorit" id="favorit" value="sw개발" checked> SW개발
+                        <input type="checkbox" name="favorit" id="favorit" value="영업" checked> 영업
+                        <input type="checkbox" name="favorit" id="favorit" value="독서"> 독서
+                        <input type="checkbox" name="favorit" id="favorit" value="직업교육"> 직업교육
+                    </td>
+                </tr>
+                <tr>
+                    <th><label for="photo">사진</label></th>
+                    <td><input type="file" name="" id="photo"></td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <input type="submit" class="saveBtn" value="SAVE">
+                    </td>
+                </tr>
+            </table>
+         </form>
+    </div>
 </body>
-</html>
