--- a/Rogue Test/test.html
+++ b/Rogue Test/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>랜덤 맵과 방, 통로 및 코인</title>
+    <title>Rogue</title>
     <style>
         canvas {
             border: 1px solid black;
@@ -11,20 +11,26 @@
             margin: 0 auto;
             background-color: #f0f0f0;
         }
-        #coinCounter {
+        #coinCounter, #mapNumberDisplay {
             position: absolute;
             top: 10px;
-            left: 10px;
             font-size: 20px;
             font-family: Arial, sans-serif;
             background-color: rgba(255, 255, 255, 0.7);
             padding: 5px 10px;
             border-radius: 5px;
         }
+        #coinCounter {
+            left: 10px;
+        }
+        #mapNumberDisplay {
+            right: 10px;
+        }
     </style>
 </head>
 <body>
     <div id="coinCounter">코인: 0</div>
+    <div id="mapNumberDisplay">1번째 맵</div> <!-- 맵 번호 표시용 -->
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script>
         const canvas = document.getElementById('gameCanvas');
@@ -34,15 +40,13 @@
         const mapWidth = canvas.width / tileSize;
         const mapHeight = canvas.height / tileSize;
 
-        // 전체 맵 배열 (빈 타일은 0, 벽은 1, 출구는 2)
+        // 맵 저장 배열 (mapNumber에 따라 저장)
+        let maps = [];
+        let mapNumber = 1; // 현재 맵 번호
+
+        // 글로벌 맵 변수
         let map = [];
-        for (let y = 0; y < mapHeight; y++) {
-            let row = [];
-            for (let x = 0; x < mapWidth; x++) {
-                row.push(1); // 초기에는 모두 벽으로 설정
-            }
-            map.push(row);
-        }
+        initializeMap();
 
         let player = {
             x: 0,
@@ -52,14 +56,13 @@
             color: 'blue'
         };
 
-        let currentRoom = 0;
         let rooms = [];
         let roomConfigurations = [];
         let exitPositions = [];
 
         // 코인 관련 변수
         let coins = [];
-        let coinCount = 0;
+        let totalCoinCount = 0; // 누적 코인 카운트
 
         // 플레이어 시작 위치를 추적하기 위한 변수
         let startingTileX = 0;
@@ -77,7 +80,13 @@
                 if (!this.collected) {
                     ctx.fillStyle = 'gold';
                     ctx.beginPath();
-                    ctx.arc(this.x * tileSize + tileSize / 2, this.y * tileSize + tileSize / 2, tileSize / 4, 0, Math.PI * 2);
+                    ctx.arc(
+                        this.x * tileSize + tileSize / 2,
+                        this.y * tileSize + tileSize / 2,
+                        tileSize / 4,
+                        0,
+                        Math.PI * 2
+                    );
                     ctx.fill();
                     ctx.closePath();
                 }
@@ -87,7 +96,25 @@
         // 코인 카운터 업데이트 함수
         function updateCoinCounter() {
             const counter = document.getElementById('coinCounter');
-            counter.textContent = `코인: ${coinCount}`;
+            counter.textContent = `코인: ${totalCoinCount}`;
+        }
+
+        // 맵 번호 표시 업데이트 함수
+        function updateMapNumberDisplay() {
+            const display = document.getElementById('mapNumberDisplay');
+            display.textContent = `${mapNumber}번째 맵`;
+        }
+
+        // 초기 맵 배열을 모두 벽으로 설정하는 함수
+        function initializeMap() {
+            map = [];
+            for (let y = 0; y < mapHeight; y++) {
+                let row = [];
+                for (let x = 0; x < mapWidth; x++) {
+                    row.push(1); // 초기에는 모두 벽으로 설정
+                }
+                map.push(row);
+            }
         }
 
         // 랜덤한 방 크기 및 위치 생성 함수
@@ -114,11 +141,7 @@
         // 방과 통로 생성 함수
         function generateRooms() {
             // 맵을 모두 벽으로 초기화
-            for (let y = 0; y < mapHeight; y++) {
-                for (let x = 0; x < mapWidth; x++) {
-                    map[y][x] = 1;
-                }
-            }
+            initializeMap();
 
             rooms = [];
             roomConfigurations = generateRandomRoomConfiguration();
@@ -165,10 +188,6 @@
                         map[y][endX] = 0;
                     }
                 }
-
-                // **통로의 끝에 출입구를 설정하지 않음**
-                // map[endY][endX] = 2;
-                // exitPositions.push({ x: endX, y: endY });
             }
 
             // 마지막 방에 대한 출입구 설정 (임의로 방의 가장자리 한 곳에 설정)
@@ -179,6 +198,15 @@
             map[lastRoomExitY][lastRoomExitX] = 2;
             exitPositions.push({ x: lastRoomExitX, y: lastRoomExitY });
 
+            // 이전 맵으로 돌아가는 초록색 오브젝트 추가
+            if (mapNumber > 1) { // 첫 번째 맵이 아니면
+                // 초록색 오브젝트를 첫 번째 방의 왼쪽 위에 위치시킵니다.
+                const firstRoom = roomConfigurations[0];
+                const greenX = firstRoom.x;
+                const greenY = firstRoom.y;
+                map[greenY][greenX] = 3; // 초록색 오브젝트 표시
+            }
+
             // 플레이어 시작 위치 설정 (첫 번째 방의 중앙)
             const firstRoom = roomConfigurations[0];
             startingTileX = firstRoom.x + Math.floor(firstRoom.width / 2);
@@ -186,14 +214,121 @@
             player.x = startingTileX * tileSize;
             player.y = startingTileY * tileSize;
 
-            // 방 생성 후 코인 생성
+            // 방 생성 후 코인 생성 (오직 새로운 맵일 때만 호출)
             generateCoins();
+
+            // 맵 번호 업데이트
+            updateMapNumberDisplay();
+
+            // 현재 맵 상태를 저장하지 않습니다. (코인을 모두 수집한 후 저장하도록 변경)
+            // saveMapState();
+
+            // 디버깅 로그
+            console.log(`맵 ${mapNumber} 생성 완료`);
+            console.log(`출입구 위치: (${lastRoomExitX}, ${lastRoomExitY})`);
+            if (mapNumber > 1) {
+                console.log(`초록색 오브젝트 위치: (${greenX}, ${greenY})`);
+            }
+            coins.forEach(coin => {
+                console.log(`코인 생성 위치: (${coin.x}, ${coin.y})`);
+            });
         }
 
-        // 맵당 1~5개의 코인을 생성하는 함수
+        // 맵 상태를 저장하는 배열에 저장하는 함수
+        function saveMapState() {
+            const mapCopy = map.map(row => row.slice());
+            const roomsCopy = roomConfigurations.map(room => ({ ...room }));
+            const playerCopy = { ...player };
+            const coinsCopy = coins.map(coin => ({ ...coin }));
+
+            maps[mapNumber] = {
+                map: mapCopy,
+                roomConfigurations: roomsCopy,
+                player: playerCopy,
+                coins: coinsCopy
+            };
+
+            // 디버깅 로그
+            console.log(`맵 ${mapNumber} 저장 완료`);
+        }
+
+        // 특정 맵 번호의 상태를 불러오는 함수
+        function loadMapState(n) {
+            if (!maps[n]) {
+                alert("존재하지 않는 맵입니다!");
+                return false;
+            }
+
+            const previousMapState = maps[n];
+
+            // 맵 복원
+            for (let y = 0; y < mapHeight; y++) {
+                for (let x = 0; x < mapWidth; x++) {
+                    map[y][x] = previousMapState.map[y][x];
+                }
+            }
+
+            // 방 구성 복원
+            roomConfigurations = previousMapState.roomConfigurations.map(room => ({ ...room }));
+            rooms = roomConfigurations.slice(); // 현재 방들을 업데이트
+
+            // 플레이어 위치 복원
+            player.x = previousMapState.player.x;
+            player.y = previousMapState.player.y;
+
+            // 코인 상태 복원
+            coins = previousMapState.coins.map(coin => {
+                const newCoin = new Coin(coin.x, coin.y);
+                newCoin.collected = coin.collected;
+                return newCoin;
+            });
+
+            // 맵 번호 설정
+            mapNumber = n;
+            updateMapNumberDisplay();
+
+            // 코인 카운트 재계산
+            recalculateTotalCoinCount();
+
+            // 디버깅 로그
+            console.log(`맵 ${mapNumber} 로드 완료`);
+            console.log(`출입구 위치: (${previousMapState.map.map((row, y) => row.indexOf(2)).filter(x => x !== -1)[0]}, ${previousMapState.map.findIndex(row => row.includes(2))})`);
+            if (mapNumber > 1) {
+                console.log(`초록색 오브젝트 위치: (${roomConfigurations[0].x}, ${roomConfigurations[0].y})`);
+            }
+            coins.forEach(coin => {
+                console.log(`코인 생성 위치: (${coin.x}, ${coin.y})`);
+            });
+
+            return true;
+        }
+
+        // 맵을 이동할 때 사용
+        function moveMap(next) {
+            if (next) {
+                if (mapNumber < maps.length && maps[mapNumber + 1]) {
+                    // 이미 생성된 맵이 있다면 로드
+                    mapNumber++;
+                    loadMapState(mapNumber);
+                } else {
+                    // 새로운 맵 생성
+                    mapNumber++;
+                    generateRooms();
+                }
+            } else {
+                if (mapNumber > 1) {
+                    mapNumber--;
+                    loadMapState(mapNumber);
+                } else {
+                    alert("이전 맵이 없습니다!");
+                }
+            }
+        }
+
+        // 맵당 1~2개의 코인을 생성하는 함수
         function generateCoins() {
             coins = [];
-            const numberOfCoins = Math.floor(Math.random() * 2) + 1; // 1에서 5개의 코인
+            const numberOfCoins = Math.floor(Math.random() * 2) + 1; // 1에서 2개의 코인
 
             for (let i = 0; i < numberOfCoins; i++) {
                 let placed = false;
@@ -220,7 +355,25 @@
                 }
             }
 
-            // 새로운 맵 생성 시 코인 수는 초기화하지 않음 (누적)
+            // 코인 카운트 업데이트 (새로운 코인을 생성할 때는 카운트를 증가시키지 않음)
+            updateCoinCounter();
+        }
+
+        // 코인 카운트 재계산 함수
+        function recalculateTotalCoinCount() {
+            totalCoinCount = 0;
+            for (let n in maps) {
+                if (maps.hasOwnProperty(n)) {
+                    const mapState = maps[n];
+                    if (mapState && mapState.coins) {
+                        for (const coin of mapState.coins) {
+                            if (coin.collected) {
+                                totalCoinCount++;
+                            }
+                        }
+                    }
+                }
+            }
             updateCoinCounter();
         }
 
@@ -231,8 +384,10 @@
                         ctx.fillStyle = 'black'; // 벽 색상
                     } else if (map[y][x] === 2) {
                         ctx.fillStyle = 'red'; // 출입구 색상
+                    } else if (map[y][x] === 3) {
+                        ctx.fillStyle = 'green'; // 이전 맵으로 돌아가는 오브젝트 색상
                     } else {
-                        ctx.fillStyle = 'white'; // 빈 공간 색상
+                        ctx.fillStyle = ((x + y) % 2 === 0) ? 'white' : 'gray';
                     }
                     ctx.fillRect(x * tileSize, y * tileSize, tileSize, tileSize);
                 }
@@ -255,56 +410,22 @@
             return coins.every(coin => coin.collected);
         }
 
-        function isCollision(newX, newY) {
-            const tileX = Math.floor(newX / tileSize);
-            const tileY = Math.floor(newY / tileSize);
-
-            if (tileX < 0 || tileY < 0 || tileX >= mapWidth || tileY >= mapHeight) {
-                return true;
-            }
-
-            if (map[tileY][tileX] === 1) { // 벽과 충돌
-                return true;
-            }
-
-            if (map[tileY][tileX] === 2) { // 출입구일 경우
-                if (allCoinsCollected()) {
-                    return false; // 모든 코인이 수집되었으면 충돌 없음
-                } else {
-                    return true; // 코인이 남아있으면 충돌
-                }
-            }
-
-            return false; // 빈 공간일 경우 충돌 없음
-        }
-
         function checkEntrance() {
             const tileX = Math.floor(player.x / tileSize);
             const tileY = Math.floor(player.y / tileSize);
 
             if (map[tileY][tileX] === 2) { // 출입구에 도달했는지 확인
                 if (allCoinsCollected()) {
-                    if (currentRoom === roomConfigurations.length - 1) {
-                        // 마지막 방에서 출구를 통해 나가면 새 맵 생성
-                        generateRooms();
-                        currentRoom = 0;
-                    } else {
-                        // 다음 방으로 이동
-                        currentRoom++;
-                    }
-
-                    // 새로운 방의 중앙으로 캐릭터 이동
-                    const newRoom = roomConfigurations[currentRoom];
-                    startingTileX = newRoom.x + Math.floor(newRoom.width / 2);
-                    startingTileY = newRoom.y + Math.floor(newRoom.height / 2);
-                    player.x = startingTileX * tileSize;
-                    player.y = startingTileY * tileSize;
-
-                    // 코인 생성 시 플레이어의 새로운 시작 위치를 반영
-                    generateCoins();
+                    // 모든 코인을 수집한 후 맵 상태 저장
+                    saveMapState();
+                    moveMap(true); // 다음 맵으로 이동
                 } else {
-                    alert("모든 코인을 수집해야 출입구를 사용할 수 있습니다!");
+                    alert("모든 코인을 수집해야 출입구 사용 가능!");
                 }
+            }
+
+            if (map[tileY][tileX] === 3) { // 이전 맵으로 돌아가는 초록색 오브젝트에 도달했는지 확인
+                moveMap(false); // 이전 맵으로 이동
             }
         }
 
@@ -315,8 +436,9 @@
             for (const coin of coins) {
                 if (!coin.collected && coin.x === playerTileX && coin.y === playerTileY) {
                     coin.collected = true;
-                    coinCount++;
+                    totalCoinCount++;
                     updateCoinCounter();
+                    // 사운드 추가는 여기서 호출
                 }
             }
         }
@@ -336,22 +458,29 @@
                 return; // 벽과 충돌 시 이동 방지
             }
 
-            if (map[tileY][tileX] === 2) { // 출입구인 경우
+            // 플레이어가 이동하려는 타일이 출입구(2)인 경우
+            if (map[tileY][tileX] === 2) {
                 if (allCoinsCollected()) {
-                    // 모든 코인이 수집되었으면 출입구를 통해 맵 이동
-                    player.x = newX;
-                    player.y = newY;
-                    checkEntrance();
+                    // 모든 코인을 수집한 후 맵 상태 저장
+                    saveMapState();
+                    moveMap(true); // 다음 맵으로 이동
                 } else {
                     alert("모든 코인을 수집해야 출입구를 사용할 수 있습니다!");
                 }
-            } else {
-                // 일반 이동
-                player.x = newX;
-                player.y = newY;
-                checkEntrance();
-                checkCoinCollision();
+                return;
             }
+
+            // 플레이어가 이동하려는 타일이 이전 맵으로 돌아가는 오브젝트(3)인 경우
+            if (map[tileY][tileX] === 3) {
+                moveMap(false); // 이전 맵으로 이동
+                return;
+            }
+
+            // 일반 이동
+            player.x = newX;
+            player.y = newY;
+            checkEntrance();
+            checkCoinCollision();
         }
 
         function gameLoop() {
@@ -370,9 +499,13 @@
             gameLoop();
         });
 
-        // 초기화
-        generateRooms();
-        gameLoop();
+        // 초기화: 첫 번째 맵 생성
+        function initializeGame() {
+            generateRooms();
+            gameLoop();
+        }
+
+        initializeGame();
     </script>
 </body>
 </html>
